Refactor orderService.ts
